Fill in HTML content

--- a/index.html
+++ b/index.html
@@ -7,14 +7,54 @@
     <title>eNamja</title>
 </head>
 <body>
-    <header></header>
+    <header>eNamja
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </header>
 
-    <div class="top"></div>
+    <div class="top">
+        <h1>Valorant Highlights</h1>
+        <p>Here are some peak Valorant highlights by eNamja.</p>
+        <button>Subscribe</button>
+        <iframe src="https://medal.tv/games/valorant/clips/42R7A6CmDqOxH/8fY6M4xY5UUk?invite=cr-MSw0ZjQsMTU0NzQ0NDIs"></iframe>
+    </div>
 
-    <div class="mid"></div>
+    <div class="mid">
+        <h1>Some more clips:</h1>
 
-    <div class="bot"></div>
+        <div class="clips">
+            <div class="clip">
+                <iframe src=""></iframe>
+                <p></p>
+            </div>
 
-    <footer></footer>
+            <div class="clip">
+                <iframe src=""></iframe>
+                <p></p>
+            </div>
+
+            <div class="clip">
+                <iframe src=""></iframe>
+                <p></p>
+            </div>
+
+            <div class="clip">
+                <iframe src=""></iframe>
+                <p></p>
+            </div>
+        </div>
+
+        <p class="quote"></p>
+        <p class="quoted"></p>
+    </div>
+
+    <div class="bot">
+        <h1>Go on. Subscribe!</h1>
+        <p></p>
+        <button>Subscribe</button>
+    </div>
+
+    <footer>Copyright © Elisha Nam 2022</footer>
 </body>
 </html>
