--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     </header>
 
     <div class="top">
-        <h1>Valorant Highlights</h1>
-        <p>Here are some peak Valorant highlights by eNamja.</p>
-        <button>Subscribe</button>
-        <iframe src="https://medal.tv/games/valorant/clips/42R7A6CmDqOxH/8fY6M4xY5UUk?invite=cr-MSw0ZjQsMTU0NzQ0NDIs"></iframe>
+        <div class="hero">
+            <h1>Valorant Highlights</h1>
+            <p>This website showcases some highlights in Valorant made by eNamja.</p>
+            <button>Subscribe</button>
+        </div>
+        <video width="760" controls>
+            <source src="media/psvol3.mp4" type="video/mp4">
+        </video>
     </div>
 
     <div class="mid">
