Format mid (CSS) and edit HTML accordingly

--- a/index.html
+++ b/index.html
@@ -22,33 +22,41 @@
             <p>This website showcases some highlights in Valorant made by eNamja.</p>
             <button>Subscribe</button>
         </div>
-        <video width="760" controls>
+        <video controls>
             <source src="media/psvol3.mp4" type="video/mp4">
         </video>
     </div>
 
     <div class="mid">
-        <h1>Some more clips:</h1>
+        <h1>Additional Highlights:</h1>
 
         <div class="clips">
             <div class="clip">
-                <iframe src=""></iframe>
-                <p></p>
+                <video controls>
+                    <source src="media/chamber1v3.mp4" type="video/mp4">
+                </video>
+                <p>Chamber 1v3 Clutch</p>
             </div>
 
             <div class="clip">
-                <iframe src=""></iframe>
-                <p></p>
+                <video controls>
+                    <source src="media/crash-peek.mp4" type="video/mp4">
+                </video>
+                <p>The Crash Peek</p>
             </div>
 
             <div class="clip">
-                <iframe src=""></iframe>
-                <p></p>
+                <video controls>
+                    <source src="media/deag.mp4" type="video/mp4">
+                </video>
+                <p>Crazy Deagle Shot</p>
             </div>
 
             <div class="clip">
-                <iframe src=""></iframe>
-                <p></p>
+                <video controls>
+                    <source src="media/phoenix1v4.mp4" type="video/mp4">
+                </video>
+                <p>Phoenix Closer</p>
             </div>
         </div>
 
