Format quote (CSS) and edit HTML accordingly

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                 <p>Phoenix Closer</p>
             </div>
         </div>
+    </div>
 
-        <p class="quote"></p>
-        <p class="quoted"></p>
+    <div class="quote-section">
+        <p class="quote">How can somebody's titties be so gelatinous?</p>
+        <p class="quoted">Gene Jeoung</p>
     </div>
 
     <div class="bot">
