Format bot (CSS), edit HTML, make further changes in quote

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
     </div>
 
     <div class="bot">
-        <h1>Go on. Subscribe!</h1>
-        <p></p>
+        <div class="text">
+            <h1>Go on. Watch more clips!</h1>
+            <p>Subscribe to view more clips and view them the moment of release!</p>
+        </div>
         <button>Subscribe</button>
     </div>
 
